--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,8 @@
 @import '@fortawesome/fontawesome-free/css/all';
+@import '@fontsource/roboto/300.css';
+@import '@fontsource/roboto/400.css';
+@import '@fontsource/roboto/500.css';
+@import '@fontsource/roboto/700.css';
 
 :root {
     --max-width: 1100px;
